Set auto width to images with max-height to (hopefully) fix IE11 image stretching.

--- a/_sass/sscummings/partials/_lightbox.scss
+++ b/_sass/sscummings/partials/_lightbox.scss
@@ -104,5 +104,6 @@
 
 	img {
 		max-height: 80vh;
+		width: auto;
 	}
 }
