--- a/_sass/sscummings/templates/_single-image.scss
+++ b/_sass/sscummings/templates/_single-image.scss
@@ -6,6 +6,7 @@
 		img {
 			padding: 0 0 $grid-gutter-width;
 			max-height: $img-max-height;
+			width: auto;
 		}
 	}
 }
